--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
-    "chance": "^1.1.12",
+    "body-parser": "^2.2.0",
+    "chance": "^1.1.13",
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "body-parser": "^2.2.0",
+    "chance": "^1.1.13",
+    "express": "^4.21.2"
   }
 }
